CAMEL-8250: camel-saxon add type converter for Saxon types. Thanks to Stephan Siano for the patch.

--- a/components/camel-saxon/pom.xml
+++ b/components/camel-saxon/pom.xml
@@ -32,7 +32,8 @@
   <properties>
     <camel.osgi.export.pkg>
       org.apache.camel.component.xquery.*,
-      org.apache.camel.language.xquery.*
+      org.apache.camel.language.xquery.*,
+      org.apache.camel.converter.saxon.*
     </camel.osgi.export.pkg>
     <camel.osgi.export.service>
       org.apache.camel.spi.ComponentResolver;component=xquery,
