--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -439,6 +439,8 @@
     <sshd-version>0.13.0</sshd-version>
     <stompjms-version>1.19</stompjms-version>
     <swagger-version>1.3.12</swagger-version>
+    <swagger-guava-version>15.0</swagger-guava-version>
+    <swagger-bundle-version>1.3.11_1</swagger-bundle-version>
     <stax-api-version>1.0.1</stax-api-version>
     <stax2-api-bundle-version>3.1.4</stax2-api-bundle-version>
     <stringtemplate-bundle-version>4.0.2_2</stringtemplate-bundle-version>
