CAMEL-8265 Initial version of camel-hipchat component to integrate with Hipchat

--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -305,6 +305,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-hipchat</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-hl7</artifactId>
     </dependency>
     <dependency>
