--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -275,6 +275,7 @@
     <jsendnsca-bundle-version>1.3.1_3</jsendnsca-bundle-version>
     <jsonlib-bundle-version>2.4_1</jsonlib-bundle-version>
     <jsonlib-version>2.4</jsonlib-version>
+    <json4s-bundle-version>3.2.8_1</json4s-bundle-version>
     <json-path-version>1.1.0</json-path-version>
     <json-smart-version>2.0</json-smart-version>
     <jsp-api-2.1-version>1.0.1</jsp-api-2.1-version>
@@ -358,7 +359,7 @@
     <oro-bundle-version>2.0.8_6</oro-bundle-version>
     <oscache-bundle-version>2.4_5</oscache-bundle-version>
     <osgi-version>4.3.1</osgi-version>
-    <paranamer-bundle-version>2.4_1</paranamer-bundle-version>
+    <paranamer-bundle-version>2.6_1</paranamer-bundle-version>
     <pax-exam-version>4.3.0</pax-exam-version>
     <pax-tiny-bundle-version>1.3.1</pax-tiny-bundle-version>
     <pax-logging-version>1.8.1</pax-logging-version>
@@ -377,6 +378,7 @@
     <quartz2-version>2.2.1</quartz2-version>
     <quickfix-bundle-version>1.5.3_1</quickfix-bundle-version>
     <rabbitmq-amqp-client-version>3.3.4</rabbitmq-amqp-client-version>
+    <reflections-bundle-version>0.9.8_1</reflections-bundle-version>
     <regexp-bundle-version>1.4_1</regexp-bundle-version>
     <restlet-version>2.2.3</restlet-version>
     <rhino-bundle-version>1.7R2_3</rhino-bundle-version>
