--- a/components/camel-mvel/pom.xml
+++ b/components/camel-mvel/pom.xml
@@ -32,7 +32,10 @@
   <properties>
     <!-- need to import spi as felix-bundle-plugin has a bug and do not include this package despite we use in the source code -->
     <camel.osgi.import.before.defaults>org.apache.camel.spi;${camel.osgi.import.strict.version}</camel.osgi.import.before.defaults>
-    <camel.osgi.export.pkg>org.apache.camel.language.mvel.*</camel.osgi.export.pkg>
+    <camel.osgi.export.pkg>
+      org.apache.camel.component.mvel.*,
+      org.apache.camel.language.mvel.*
+    </camel.osgi.export.pkg>
     <camel.osgi.export.service>
       org.apache.camel.spi.ComponentResolver;component=mvel,
       org.apache.camel.spi.LanguageResolver;language=mvel
