CAMEL-8055 Added camel-atoms component into the kit

--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -71,6 +71,9 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-atmosphere-websocket</artifactId>
     </dependency>
+    <groupId>org.apache.camel</groupId>
+      <artifactId>camel-atoms</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-atom</artifactId>
@@ -827,11 +830,11 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-catalog</artifactId>
-    </dependency>  
+    </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-commands-core</artifactId>
-    </dependency>      
+    </dependency>
     <dependency>
       <groupId>org.apache.camel.karaf</groupId>
       <artifactId>camel-karaf-commands</artifactId>
