--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -589,6 +589,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-atoms</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-atom</artifactId>
         <version>${project.version}</version>
       </dependency>
