--- a/components/camel-jsonpath/pom.xml
+++ b/components/camel-jsonpath/pom.xml
@@ -47,6 +47,11 @@
       <artifactId>json-path</artifactId>
       <version>${json-path-version}</version>
     </dependency>
+    <dependency>
+      <groupId>net.minidev</groupId>
+      <artifactId>json-smart</artifactId>
+      <version>${json-smart-version}</version>
+    </dependency>
 
     <!-- testing -->
     <dependency>
