CAMEL-7999: Fixed camel-flatpack to not clash component and dataformat in same package with same name.

--- a/components/camel-flatpack/pom.xml
+++ b/components/camel-flatpack/pom.xml
@@ -30,7 +30,10 @@
   <description>Camel FlatPack support</description>
 
   <properties>
-    <camel.osgi.export.pkg>org.apache.camel.component.flatpack.*</camel.osgi.export.pkg>
+    <camel.osgi.export.pkg>
+      org.apache.camel.component.flatpack.*,
+      org.apache.camel.dataformat.flatpack.*
+    </camel.osgi.export.pkg>
     <camel.osgi.export.service>
       org.apache.camel.spi.ComponentResolver;component=flatpack,
       org.apache.camel.spi.DataFormatResolver;dataformat=flatpack
