Add camel-atmos to kit. Polish the component so it has out of the box documentation. Add name option so the endpoint can have a logical name so the endpoints can be more natural.

--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -69,11 +69,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-atmosphere-websocket</artifactId>
+      <artifactId>camel-atmos</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-atoms</artifactId>
+      <artifactId>camel-atmosphere-websocket</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
