--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -54,6 +54,7 @@
     <asm-bundle-version>3.3.1_1</asm-bundle-version>
     <asm-version>3.3.1</asm-version>
     <aspectj-version>1.6.2</aspectj-version>
+    <atmos-client-version>2.2.2</atmos-client-version>
     <atmosphere-version>2.2.4</atmosphere-version>
     <atmosphere-version-range>[2.0,3.0)</atmosphere-version-range>
     <atomikos-transactions-version>3.9.3</atomikos-transactions-version>
@@ -576,6 +577,11 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-amqp</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-atmos</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
