--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -63,6 +63,7 @@
     <avro-version>1.7.7</avro-version>
     <avro-bundle-version>1.7.7_1</avro-bundle-version>
     <avro-ipc-bundle-version>1.7.7_1</avro-ipc-bundle-version>
+    <awaitility.version>1.6.3</awaitility.version>
     <aws-java-sdk-bundle-version>1.8.9.1_1</aws-java-sdk-bundle-version>
     <aws-java-sdk-version>1.8.9.1</aws-java-sdk-version>
     <axiom-version>1.2.14</axiom-version>
@@ -2207,6 +2208,11 @@
         <groupId>httpunit</groupId>
         <artifactId>httpunit</artifactId>
         <version>${httpunit-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.jayway.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>${awaitility.version}</version>
       </dependency>
 
       <!-- default JPA support -->
