--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -417,7 +417,8 @@
     <solr-version-range>[4.9,5)</solr-version-range>
     <spark-rest-version>2.0.0</spark-rest-version>
     <splunk-version>1.3.0_1</splunk-version>
-    <spring-batch-version>2.2.7.RELEASE</spring-batch-version>
+    <spring-batch-version>3.0.3.RELEASE</spring-batch-version>
+    <spring-batch-bundle-version>3.0.2.RELEASE_1</spring-batch-bundle-version>
     <spring-boot-version>1.2.1.RELEASE</spring-boot-version>
     <spring-castor-bundle-version>1.2.0</spring-castor-bundle-version>
     <spring-data-commons-version>1.6.1.RELEASE</spring-data-commons-version>
@@ -426,7 +427,7 @@
     <spring-javaconfig-version>1.0.0-20090215</spring-javaconfig-version>
     <spring-ldap-version>2.0.2.RELEASE</spring-ldap-version>
     <spring-ldap-bundle-version>2.0.2.RELEASE_1</spring-ldap-bundle-version>
-    <spring-retry-version>1.0.3.RELEASE</spring-retry-version>
+    <spring-retry-version>1.1.0.RELEASE</spring-retry-version>
     <!-- Spring 4 can be used in OSGi, but not with spring-dm.  Allow Spring 4 for the bundle imports. -->
     <spring-version-range>[3.2,5)</spring-version-range>
     <!-- However, spring-dm does not support spring 4.x so import-range must be 3.x for the -->
