--- a/components/camel-blueprint/pom.xml
+++ b/components/camel-blueprint/pom.xml
@@ -167,6 +167,25 @@
               </executions>
             </plugin>
 
+            <plugin>
+              <groupId>org.apache.camel</groupId>
+              <artifactId>camel-eip-documentation-enricher-maven-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>eip-documentation-enricher</id>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>eip-documentation-enricher</goal>
+                  </goals>
+                  <configuration>
+                    <inputCamelSchemaFile>${project.build.directory}/schema/camel-blueprint.xsd</inputCamelSchemaFile>
+                    <outputCamelSchemaFile>${project.build.directory}/schema/camel-blueprint.xsd</outputCamelSchemaFile>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+
+
         </plugins>
 
         <pluginManagement>
