--- a/components/camel-paxlogging/pom.xml
+++ b/components/camel-paxlogging/pom.xml
@@ -30,9 +30,7 @@
     <description>Camel PaxLogging support</description>
 
     <properties>
-        <camel.osgi.activator>org.apache.camel.component.paxlogging.Activator</camel.osgi.activator>
-        <camel.osgi.export.pkg>!*</camel.osgi.export.pkg>
-        <camel.osgi.private.pkg>org.apache.camel.component.paxlogging</camel.osgi.private.pkg>
+        <camel.osgi.export.pkg>org.apache.camel.component.paxlogging</camel.osgi.export.pkg>
         <camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=paxlogging</camel.osgi.export.service>
     </properties>
 
