--- a/components/camel-eventadmin/pom.xml
+++ b/components/camel-eventadmin/pom.xml
@@ -30,9 +30,7 @@
     <description>Camel OSGi Event Admin support</description>
 
     <properties>
-        <camel.osgi.activator>org.apache.camel.component.eventadmin.Activator</camel.osgi.activator>
-        <camel.osgi.export.pkg>!*</camel.osgi.export.pkg>
-        <camel.osgi.private.pkg>org.apache.camel.component.eventadmin</camel.osgi.private.pkg>
+        <camel.osgi.export.pkg>org.apache.camel.component.eventadmin</camel.osgi.export.pkg>
         <camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=eventadmin</camel.osgi.export.service>
     </properties>
 
