--- a/components/camel-paxlogging/pom.xml
+++ b/components/camel-paxlogging/pom.xml
@@ -27,7 +27,7 @@
     <artifactId>camel-paxlogging</artifactId>
     <packaging>bundle</packaging>
     <name>Camel :: Pax Logging</name>
-    <description>Camel PaxLogging support</description>
+    <description>Camel OSGi PaxLogging support</description>
 
     <properties>
         <camel.osgi.export.pkg>org.apache.camel.component.paxlogging</camel.osgi.export.pkg>
@@ -56,6 +56,7 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+          <scope>provided</scope>
         </dependency>
 
         <!-- test dependencies -->
