--- a/components/camel-ejb/pom.xml
+++ b/components/camel-ejb/pom.xml
@@ -47,6 +47,12 @@
           <artifactId>openejb-core</artifactId>
           <version>${openejb-version}</version>
           <scope>test</scope>
+          <exclusions>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-jdk14</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
         <dependency>
           <groupId>org.apache.camel</groupId>
