--- a/components/camel-jetty8/pom.xml
+++ b/components/camel-jetty8/pom.xml
@@ -132,15 +132,35 @@
     </dependencies>
 
     <build>
-    	<testSourceDirectory>../camel-jetty9/src/test/java</testSourceDirectory>
+    	<testSourceDirectory>target/generated/src/test/java</testSourceDirectory>
         <plugins>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-test-sources</id>
+                        <phase>generate-test-sources</phase>
+                        <configuration>
+                            <target>
+                                <copy todir="target/generated/src/test/java">
+                                    <fileset dir="../camel-jetty9/src/test/java"/>
+                                </copy>                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- use per test fork mode to avoid side effects -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
           	    <forkCount>1</forkCount>
-	  	    <reuseForks>false</reuseForks>
-                    <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
+                <reuseForks>false</reuseForks>
+                <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
                 </configuration>
             </plugin>
         </plugins>
