Update to latest Jetty versions, cannot use depMgmt in parent pom or that will override deps pulled in directly causing version issues.

--- a/components/camel-cmis/pom.xml
+++ b/components/camel-cmis/pom.xml
@@ -73,11 +73,13 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
+            <version>${jetty-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
+            <version>${jetty-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
