--- a/components/camel-gae/pom.xml
+++ b/components/camel-gae/pom.xml
@@ -88,11 +88,13 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
+      <version>${jetty-version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
+      <version>${jetty-version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
