--- a/components/camel-solr/pom.xml
+++ b/components/camel-solr/pom.xml
@@ -107,11 +107,13 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
+      <version>${jetty-version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
+      <version>${jetty-version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
