--- a/tooling/archetypes/camel-archetype-scr/pom.xml
+++ b/tooling/archetypes/camel-archetype-scr/pom.xml
@@ -17,62 +17,63 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>archetypes</artifactId>
-        <groupId>org.apache.camel</groupId>
-        <version>2.15-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <artifactId>archetypes</artifactId>
+    <groupId>org.apache.camel</groupId>
+    <version>2.15-SNAPSHOT</version>
+  </parent>
 
-    <groupId>org.apache.camel.archetypes</groupId>
-    <artifactId>camel-archetype-scr</artifactId>
-    <name>Camel :: Archetypes :: OSGi Service Component Runtime bundle</name>
-    <description>Creates a new Camel SCR bundle project for Karaf</description>
-    <packaging>maven-archetype</packaging>
+  <groupId>org.apache.camel.archetypes</groupId>
+  <artifactId>camel-archetype-scr</artifactId>
+  <name>Camel :: Archetypes :: OSGi Service Component Runtime bundle</name>
+  <description>Creates a new Camel SCR bundle project for Karaf</description>
+  <packaging>maven-archetype</packaging>
 
-    <build>
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.archetype</groupId>
-                <artifactId>archetype-packaging</artifactId>
-                <version>2.2</version>
-            </extension>
-        </extensions>
+  <build>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.archetype</groupId>
+        <artifactId>archetype-packaging</artifactId>
+        <version>2.2</version>
+      </extension>
+    </extensions>
 
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>false</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/resources-filtered</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>**/archetype-metadata.xml</include>
-                </includes>
-            </resource>
-        </resources>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>src/main/resources-filtered</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/archetype-metadata.xml</include>
+        </includes>
+      </resource>
+    </resources>
 
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-                <filtering>true</filtering>
-            </testResource>
-        </testResources>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
 
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-archetype-plugin</artifactId>
-                    <version>2.2</version>
-                    <configuration>
-                        <skip>${maven.test.skip.exec}</skip>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-archetype-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+            <skip>${maven.test.skip.exec}</skip>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
 </project>
