--- a/tooling/archetypes/pom.xml
+++ b/tooling/archetypes/pom.xml
@@ -15,7 +15,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -48,7 +49,27 @@
     <module>camel-archetype-web</module>
     <module>camel-archetype-webconsole</module>
   </modules>
+
   <build>
+    <plugins>
+
+      <!-- generate archetype catalog -->
+      <plugin>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-package-maven-plugin</artifactId>
+        <version>${project.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate-archetype-catalog</goal>
+            </goals>
+            <phase>process-resources</phase>
+          </execution>
+        </executions>
+      </plugin>
+
+    </plugins>
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -56,10 +77,10 @@
           <artifactId>maven-eclipse-plugin</artifactId>
           <configuration>
             <buildcommands>
-                <java.lang.String>com.atlassw.tools.eclipse.checkstyle.CheckstyleBuilder</java.lang.String>
+              <java.lang.String>com.atlassw.tools.eclipse.checkstyle.CheckstyleBuilder</java.lang.String>
             </buildcommands>
             <projectnatures>
-                <nature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</nature>
+              <nature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</nature>
             </projectnatures>
             <additionalConfig>
               <file>
@@ -72,4 +93,5 @@
       </plugins>
     </pluginManagement>
   </build>
+
 </project>
