CAMEL-8365: Attach generate catalog to mvn build

--- a/tooling/archetypes/pom.xml
+++ b/tooling/archetypes/pom.xml
@@ -68,6 +68,30 @@
         </executions>
       </plugin>
 
+      <!-- attach the generate archetype-catalog so its released to maven repo -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-artifacts</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>attach-artifact</goal>
+            </goals>
+            <configuration>
+              <artifacts>
+                <artifact>
+                  <file>target/classes/archetype-catalog.xml</file>
+                  <type>xml</type>
+                  <classifier>archetype-catalog</classifier>
+                </artifact>
+              </artifacts>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
 
     <pluginManagement>
