--- a/components/pom.xml
+++ b/components/pom.xml
@@ -143,6 +143,7 @@
     <module>camel-kafka</module>
     <module>camel-kestrel</module>
     <module>camel-krati</module>
+    <module>camel-kura</module>
     <module>camel-ldap</module>
     <module>camel-leveldb</module>
     <module>camel-linkedin</module>
