CAMEL-8365: Attach generate catalog to mvn build

--- a/tooling/archetypes/pom.xml
+++ b/tooling/archetypes/pom.xml
@@ -53,7 +53,7 @@
   <build>
     <plugins>
 
-      <!-- generate archetype catalog -->
+      <!-- generate and attach Camel archetype catalog -->
       <plugin>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-package-maven-plugin</artifactId>
@@ -61,33 +61,9 @@
         <executions>
           <execution>
             <goals>
-              <goal>generate-archetype-catalog</goal>
+              <goal>generate-and-attach-archetype-catalog</goal>
             </goals>
             <phase>process-resources</phase>
-          </execution>
-        </executions>
-      </plugin>
-
-      <!-- attach the generate archetype-catalog so its released to maven repo -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>attach-artifacts</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>target/classes/archetype-catalog.xml</file>
-                  <type>xml</type>
-                  <classifier>archetype-catalog</classifier>
-                </artifact>
-              </artifacts>
-            </configuration>
           </execution>
         </executions>
       </plugin>
