CAMEL-8379: Camel catalog - Include xml schema and maven archetype catalog

--- a/platforms/catalog/pom.xml
+++ b/platforms/catalog/pom.xml
@@ -37,7 +37,8 @@
       org.apache.camel.catalog.components,
       org.apache.camel.catalog.dataformats,
       org.apache.camel.catalog.languages,
-      org.apache.camel.catalog.models
+      org.apache.camel.catalog.models,
+      org.apache.camel.catalog.schemas
     </camel.osgi.export.pkg>
   </properties>
 
