CAMEL-8379: Camel catalog - Now has JMX api

--- a/platforms/catalog/pom.xml
+++ b/platforms/catalog/pom.xml
@@ -46,6 +46,18 @@
 
     <!-- no dependency -->
 
+    <!-- testing -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
